add gallery function and api
